ci: css login and App

--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -1,9 +1,15 @@
+html, body {
+  margin: 0;
+  height: 0;
+  margin-top: -100px;
+  background-color: rgb(228, 88, 121) ;
+}
+
 .login {
-    background-color: plum;
+    background-color: rgb(228, 88, 121);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-top: 0;
     width: 100vw;
     height: 100vh;
     text-align: center;
@@ -15,9 +21,10 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
-    margin: auto;
-    background: white;
-    padding: 60px;
+    margin-top: 200px;
+    margin-left: 500px;
+    background: rgb(228, 88, 121);
+    padding: 300px;
     border-radius: 8px;
     height: auto;
     min-height: 40vh;
@@ -27,11 +34,22 @@
   }
   
   .button-login {
-    background-color: #8252b3 !important;
-    color: white !important;
+    background-color: white !important;
+    color: rgb(228, 88, 121) !important;
     border: #600eb1 !important;
     padding: 10px !important;
     text-decoration: none !important;
     display: inline-block !important;
     font-size: 20px !important;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    border-radius: 0.5em;
   }
+
+  .form-control {
+    margin: 0.5em;
+    border-radius: 0.5em;
+    padding: 11px 30px;
+  }
+
+  
