--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -1,4 +1,18 @@
 .navbar{
   margin-top: 220px;
   margin-bottom: 5px;
+  
+}
+
+#logo{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 50;
+}
+
+.link-pink{
+  color: rgb(247, 71, 100) !important;
+  font-size: 20px !important;
+  font-weight: 500;
 }
