--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -27,6 +27,26 @@
     display: inline-flex;
   }
 
+  .thoughts{
+    display: block;
+    flex-direction: column;
+    justify-content: center;
+    font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 20px;
+    border-color: #eee #ddd #bbb;
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+    margin: 10px 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px 16px 16px 16px;
+    max-width: 468px;
+  }
+
   .button-feed {
     background-color: white !important;
     color: rgb(228, 88, 121) !important;
