--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -17,6 +17,7 @@
     text-align: center;
     background: rgb(52, 51, 60);
     padding: 20px;
+    padding-left: 380px;
     padding-bottom: 0.7em;
     border-radius: 8px;
     height: auto;
@@ -44,6 +45,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 20px 16px 16px 16px;
+    width: 100vw;
     max-width: 468px;
   }
 
