--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -1,6 +1,7 @@
 .navbar{
   margin-top: 220px;
   margin-bottom: 5px;
+  height: 150px;
   
 }
 
@@ -18,6 +19,9 @@
   font-size: 20px !important;
   font-weight: 500;
   margin-left: 20px;
-  margin-right: 20px;;
+  margin-right: 20px;
+  text-align: right;
   float: right;
 }
+
+
