--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -1,61 +1,138 @@
-html, body {
+@import url('https://rsms.me/inter/inter-ui.css');
+::selection {
+  background: rgb(52, 51, 60);
+}
+::-webkit-selection {
+  background: rgb(52, 51, 60);
+}
+::-moz-selection {
+  background: rgb(52, 51, 60);
+}
+body {
+  background: rgb(52, 51, 60);
+  font-family: 'Inter UI', sans-serif;
   margin: 0;
-  height: 0;
-  margin-top: -100px;
-  background-color: rgb(52, 51, 60) ;
+  padding: 20px;
 }
-
-.login {
-    background-color: rgb(52, 51, 60);
-    background-position: right;
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
-
+.page {
+  background: rgb(52, 51, 60);
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 40px);
+  position: absolute;
+  place-content: center;
+  width: calc(100% - 40px);
 }
-
-.login-container {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 100px;
-    margin-left: 500px;
-    background: rgb(52, 51, 60);
-    border-radius: 8px;
+@media (max-width: 767px) {
+  .page {
     height: auto;
-    min-height: 40vh;
-    width: 30%;
-    font-weight: 600;
-    opacity: .85;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
   }
-  
-  .button-login {
-    color: white !important;
-    border: rgb(247, 71, 100) !important;
-    background-color: rgb(247, 71, 100);
-    padding: 10px !important;
-    text-decoration: none !important;
-    display: inline-block !important;
-    font-size: 20px !important;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    border-radius: 0.5em;
+}
+.container {
+  display: flex;
+  height: 320px;
+  margin: 0 auto;
+  width: 640px;
+}
+@media (max-width: 767px) {
+  .container {
+    flex-direction: column;
+    height: 630px;
+    width: 320px;
   }
+}
+.left {
+  background: white;
+  height: calc(100% - 40px);
+  top: 20px;
+  position: relative;
+  width: 50%;
+}
+@media (max-width: 767px) {
+  .left {
+    height: 100%;
+    left: 20px;
+    width: calc(100% - 40px);
+    max-height: 270px;
+  }
+}
+.login {
+  color: rgb(247, 71, 100);
+  font-size: 50px;
+  font-weight: 900;
+  margin: 50px 40px 40px;
+}
+.eula {
+  color: #999;
+  font-size: 14px;
+  line-height: 1.5;
+  margin: 40px;
+}
+.right {
+  background: #474A59;
+  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
+  color: #F1F1F2;
+  position: relative;
+  width: 50%;
+}
+@media (max-width: 767px) {
+  .right {
+    flex-shrink: 0;
+    height: 100%;
+    width: 100%;
+    max-height: 350px;
+  }
+}
+svg {
+  position: absolute;
+  width: 320px;
+}
+path {
+  fill: none;
+  stroke: url(#linearGradient);;
+  stroke-width: 4;
+  stroke-dasharray: 240 1386;
+}
+.form {
+  margin: 40px;
+  position: absolute;
+}
+label {
+  color:  #c2c2c5;
+  display: block;
+  font-size: 14px;
+  height: 16px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+input {
+  background: transparent;
+  border: 0;
+  color: #f2f2f2;
+  font-size: 20px;
+  height: 30px;
+  line-height: 30px;
+  outline: none !important;
+  width: 100%;
+}
+input::-moz-focus-inner { 
+  border: 0; 
+}
+#submit {
+  color: #707075;
+  margin-top: 40px;
+  transition: color 300ms;
+}
+#submit:focus {
+  color: #f2f2f2;
+}
+#submit:active {
+  color: #d0d0d2;
+}
 
-  .group{
-    margin-top: 100px;
-    padding-top: 100px;
-  }
-
-  .form-control {
-    color: black;
-    margin: 0.5em;
-    border-radius: 0.5em;
-    padding: 11px 30px;
-  }
-
-  .link{
+.link{
   color:white;
   }
   
