--- a/client/src/css/Signin.css
+++ b/client/src/css/Signin.css
@@ -1,4 +1,22 @@
 .signin {
-    margin: 200px;
-    margin-top: 400px;
+  height: 320px;
+  margin: 0 auto;
+  width: 640px;
+  margin-top: -300px;
 }
+.signin-form{
+  display: block;
+  margin-top: 0em;
+  background: #474A59;
+  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
+  color: #F1F1F2;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.sign-up {
+    color: rgb(247, 71, 100);
+    font-size: 50px;
+    font-weight: 900;
+    margin: 50px 40px 40px;
+  }
