--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -36,6 +36,7 @@ body {
   height: 320px;
   margin: 0 auto;
   width: 640px;
+  margin-top: -240px;
 }
 @media (max-width: 767px) {
   .container {
