--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -17,7 +17,8 @@
     text-align: center;
     background: rgb(52, 51, 60);
     padding: 20px;
-    padding-left: 380px;
+    margin-top: -100px;
+    padding-left: 10px;
     padding-bottom: 0.7em;
     border-radius: 8px;
     height: auto;
@@ -49,18 +50,16 @@
     max-width: 468px;
   }
 
-  .button-feed {
-    background-color: white !important;
-    color: rgb(228, 88, 121) !important;
-    border: #600eb1 !important;
-    padding: 9px !important;
-    text-decoration: none !important;
-    display: inline-block !important;
-    font-size: 20px !important;
-    border-radius: 0.5em;
-  }
-
   #textarea {
+    background: transparent;
+    border: 0;
+    color: #f2f2f2;
+    font-size: 20px;
+    height: 40px;
+    line-height: 30px;
+    outline: none !important;
+    width: 100%;
+    padding: 8px;
     outline: none;
     resize: none;
 
