--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -31,10 +31,30 @@ html, body {
 }
 
 .file {
-  margin-right: auto;
+  margin: auto;
+  position: relative;
+  top: 0;
+  left:0
+  
 }
 
 .profilepic {
-  width: 70px;
-  height: 70px;
+  width: 230px;
+  height: 230px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 130px;
+  left: 640px;
+  border: 1px solid #000000;
+  
+}
+
+.backgroundpic {
+  height: 450px;
+  width: 1500px;
+  border-radius: 3%;
+  position: relative;
+  top: 0;
+  left: 0;
+  
 }
