fix: small text changings and css

--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -31,6 +31,12 @@ html, body {
   margin-left: 600px;
 }
 
+.usersinplat {
+  position: absolute;
+  right: -900px;
+  top: 580px;
+}
+
 .row {
   width: 350px;
   height: 150px;
