--- a/client/src/css/Signin.css
+++ b/client/src/css/Signin.css
@@ -1,22 +1,19 @@
-.signin {
-  height: 320px;
-  margin: 0 auto;
-  width: 640px;
-  margin-top: -500px;
-}
+
 .signin-form{
-  display: block;
-  margin-top: 0em;
-  background: #474A59;
+  width: 50%;
+  height: 70%;
+  margin: auto;
+  padding: 10px;
+  background: white;
   box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
   color: #F1F1F2;
-  position: relative;
-  width: 100%;
-  height: 100%;
+  border-radius: 4%;
+  
+  
 }
 .sign-up {
-    color: rgb(247, 71, 100);
-    font-size: 50px;
-    font-weight: 900;
-    margin: 50px 40px 40px;
-  }
+  font-family: 'Amatic SC', cursive;
+  font-size: 60px;
+  color: rgb(240, 68, 211);
+  font-weight: 900;
+}
