--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
+
+h2 {
+  font-family: 'Amatic SC', cursive;
+  color: rgb(247, 71, 100);
+  float: left;
+}
+
 html, body { 
   height:100%; 
   margin:0;
@@ -89,5 +97,7 @@ ul {
   text-align: right;
 }
 
-
+.usersinplat {
+  display: inline-block;
+}
 
