--- a/client/src/css/Signin.css
+++ b/client/src/css/Signin.css
@@ -4,8 +4,8 @@
   height: 70%;
   margin: auto;
   padding: 10px;
-  background: white;
-  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
+  background: rgb(231, 218, 230);
+  box-shadow: 5px 5px 15px 4px rgb(66, 54, 65);
   color: #F1F1F2;
   border-radius: 4%;
   
