--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -1,5 +1,5 @@
 .feedform {
-  background: white;
+  background: whitesmoke;
 }
 
 .feed-container {
@@ -44,11 +44,22 @@
 
 .container-fluid {
   margin-top: -200px;
+  padding-top: 200px;
   width: 100%;
+}
+
+.greeting {
+  float: left;
 }
 
 .columns {
   display: inline-flex;
+  padding-top: 5%;
+  width: 100%;
+}
+
+.col-7 {
+  max-width: 10000px !important;
 }
 
 .thoughts{
@@ -61,7 +72,7 @@
   margin-left: auto;
   margin-right: auto;
   padding: 20px 16px 16px 16px;
-  max-width: 70%;
+  width: 800px !important;
   border-radius: 2% !important;
 }
 
