--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -1,5 +1,5 @@
 .feedform {
-  background: whitesmoke;
+  background: white;
   padding-top: 4%;
 }
 
@@ -44,7 +44,7 @@
 .container-fluid {
   padding-top: 8%;
   width: 100%;
-
+  position: relative;
 }
 
 .greeting {
@@ -60,26 +60,23 @@
   width: 100%;
 }
 
-.wrapper {
-  width:100%;
-  position:relative;
-  z-index:10;
-  background:inherit;
+#search {
+  position:fixed;
+  
 }
 
-.wrapper2 {
-  width:100%;
-  position:relative;
-  z-index:10;
-  background:inherit;
+#posts {
+  position: absolute;
+  left: 20%;
+  
 }
 
-.col-7 {
-  width:100%;
-    padding-top:92px;
-    z-index:5;
-    overflow:auto;
+#feedsugg {
+  position: fixed;
+  right: 5%;
+  
 }
+
 
 .thoughts{
   font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
