changes in css and package json

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,7 @@ html, body {
   background-size: auto;
   background-position: center center;
   background-attachment: fixed;
-  color: white;
+  color: #151617;
   
 }
 
