--- a/client/src/css/Followers.css
+++ b/client/src/css/Followers.css
@@ -1,11 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
-
-h2 {
-  font-family: 'Amatic SC', cursive;
-  color: rgb(247, 71, 100);
-  margin-left: auto;
-}
-
 .users {
   padding-left: auto;
 }
@@ -24,5 +16,5 @@ h2 {
   cursor: pointer;
   color: white;
   font-family: 'Amatic SC', cursive;
-  background-color: rgb(240, 68, 211) !important;
+  background-color: transparent !important;
 }
