add background image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,11 +6,14 @@ html, body {
 .App {
   text-align: center; 
   text-emphasis-color: white;
-  background-size: auto;
   background-position: center center;
   background-attachment: fixed;
   color: #151617;
-  
+  background-image: url("./images/backcolor.jpg");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 
