--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -1,7 +1,7 @@
 
 .page {
-  background: white;
-  margin-top: -20px;
+  background: transparent;
+  margin-top: 4%;
   display: flex;
   flex-direction: column;
   height: calc(100% - 40px);
@@ -13,10 +13,7 @@
 .container {
   display: flex;
   height: 500px;
-  margin-top: -240px;
-  margin: 50px;
-  background: rgb(231, 218, 230);
-  box-shadow: 5px 5px 15px 4px rgb(66, 54, 65);
+  background: transparent;
   max-width: 380px !important;
   display: inline !important;
   border-radius: 4%;
@@ -42,9 +39,8 @@
   display: inline-block !important;
   border: 0px !important;
   border-radius: 0% !important;
-  background-color: rgb(231, 218, 230) !important;
+  background-color: transparent !important;
   border-bottom: 1px solid rgba(167, 164, 164, 0.842) !important;
-  
 }
 
 textarea:hover, 
@@ -66,9 +62,9 @@ label:focus,
 }
 
 .submit {
-  color: rgb(240, 68, 211) !important;
+  color: rgb(247, 28, 210) !important;
   font-family: 'Amatic SC', cursive;
-  font-size: 20px !important;
+  font-size: 22px !important;
   background-color: transparent !important;
   border-color: rgb(240, 68, 211) !important;
   margin-top: 60px;
@@ -86,12 +82,12 @@ label:focus,
 
 .link-div{
   padding-top: 80px;
-  padding-right: 28px;
+  padding-right: 3%;
 }
 
 .link{
-  color:#999;
-  font-size: 14px;
+  color:white;
+  font-size: 15px;
   line-height: 1.5;
   }
   
